--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body> 
 <h1>Happy Birthday SUMI !! 🎉✨</h1>
-<img src="/Happy Birthday/photo.jpg" alt="">
+<img src="photo.jpg" alt="">
 
 <h2>
   I hope your dream comes true.<br>
